--- a/websource/package.json
+++ b/websource/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.3.28",
     "js": "^0.1.0",
